# clicker

./: README.md  pyproject.toml
clicker/: __main__.py
